fixing overflow issue once more

--- a/hidden/style/starbucks.css
+++ b/hidden/style/starbucks.css
@@ -40,6 +40,9 @@ nav {
   overflow-x: hidden;
 } */
 
+.wrapper {
+  overflow-x:hidden;
+}
 /* ----------------------------------------
 Variables
 ---------------------------------------- */
